--- a/.github/workflows/quarto.yaml
+++ b/.github/workflows/quarto.yaml
@@ -14,18 +14,17 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
-      
-      # add software dependencies here
+      # add software dependencies
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages:
             any::tidyverse
             
-       - name: Publish to GitHub Pages (and render)
-         uses: quarto-dev/quarto-actions/publish@v2
-         with:
-           target: gh-pages
-         env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+      - name: Publish to GitHub Pages (and render)
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          target: gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
       
